# PF-Project-23K

./: .gitignore  Project Proposal.docx  Project Report.docx  README.md  myprogram
src/: CMakeLists.txt  README.md  adj_new.c  arithematic.c  arithmetic.c  determinants.c  functions.c  log.c  main.c  matrices.c  null matrix.c  single.c  temp.c  transpose.c  trign.c  ui  ui.c  unit matrix.c
src/Archive/: arithematic.c  determinants.c  scalar multiplication.c  transpose.c
src/headers/: arithmetic.h  functions.h  matrices.h  ui.h
test/: CMakeLists.txt  matrices.cpp  test_matrices.cpp
